# mostlyai

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  install_bnb_vllm_rocm.sh  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  setup.sh
.devcontainer/local/: devcontainer.json
.github/: changelog_config.json
.github/workflows/: lint-check.yaml  pre-commit-check.yaml  run-tests-cpu.yaml  run-tests-gpu.yaml  test-notebooks.yaml  workflow.yaml  workflow.yml
api_client/: index.html
api_domain/: index.html
docs/: api_client.md  api_domain.md  syntax.md  tutorials.md  usage.md
docs/tutorials/conditional-generation/: conditional-generation.ipynb
docs/tutorials/differential-privacy/: differential-privacy.ipynb
docs/tutorials/explainable-ai/: explainable-ai.ipynb
docs/tutorials/fairness/: fairness.ipynb
docs/tutorials/fake-or-real/: fake-or-real.ipynb
docs/tutorials/getting-started/: getting-started.ipynb
docs/tutorials/multi-table/: migrate-sqlite.py  multi-table.ipynb
docs/tutorials/quality-assurance/: quality-assurance.ipynb
docs/tutorials/rebalancing/: rebalancing.ipynb
docs/tutorials/size-vs-accuracy/: size-vs-accuracy.ipynb
docs/tutorials/smart-imputation/: smart-imputation.ipynb
docs/tutorials/star-schema-correlations/: star-schema-correlations.ipynb
docs/tutorials/synthetic-text/: synthetic-text.ipynb
docs/tutorials/synthetic-text-llm/: synthetic-llm-text.ipynb  synthetic-text-llm.ipynb
docs/tutorials/synthetic-text-lstm/: synthetic-text-lstm.ipynb
docs/tutorials/train-synthetic-test-real/: TSTR.ipynb
mostlyai/: domain.py
mostlyai/client/: _base_utils.py  _mostly_utils.py  _naming_conventions.py  api.py  base.py  connectors.py  generators.py  synthetic_datasets.py
mostlyai/sdk/: __init__.py  domain.py
mostlyai/sdk/_data/: __init__.py  auto_detect.py  base.py  context.py  conversions.py  dtype.py  exceptions.py  language_model.py  metadata_objects.py  non_context.py  progress_callback.py  pull.py  pull_context.py  pull_utils.py  push.py
mostlyai/sdk/_data/db/: base.py  bigquery.py  databricks.py  hive.py  mssql.py  mysql.py  oracle.py  postgresql.py  snowflake.py  sqlite.py  types_coercion.py
mostlyai/sdk/_data/file/: base.py  utils.py
mostlyai/sdk/_data/file/container/: aws.py  azure.py  bucket_based.py  gcs.py  minio.py
mostlyai/sdk/_data/file/table/: csv.py  feather.py  json.py  parquet.py
mostlyai/sdk/_data/util/: __init__.py  common.py  kerberos.py
mostlyai/sdk/_local/: cli.py  connectors.py  generators.py  progress.py  routes.py  server.py  storage.py  synthetic_datasets.py
mostlyai/sdk/_local/execution/: jobs.py  plan.py  step_analyze_training_data.py  step_create_data_report.py  step_create_model_report.py  step_deliver_data.py  step_encode_training_data.py  step_finalize_generation.py  step_finalize_training.py  step_generate_data.py  step_generate_model_report_data.py  step_pull_training_data.py  step_train_model.py
mostlyai/sdk/client/: _base_utils.py  _naming_conventions.py  _utils.py  api.py  base.py  connectors.py  exceptions.py  generators.py  synthetic_datasets.py
search/: search_index.json
syntax/: index.html
tests/: test_domain.py
tests/_data/unit/: conftest.py  test_auto_detect.py  test_base.py  test_dtype.py  test_finalize_generation.py  test_non_context.py  test_pull.py  test_push.py
tests/_data/unit/db/: test_db.py  test_types_coercion.py
tests/_data/unit/file/: conftest.py  test_csv.py  test_feather.py  test_json.py  test_parquet.py  test_utils.py
tests/_data/unit/file/fixtures/csv/: sample.csv
tests/_data/unit/file/fixtures/csv/baseball/players/: players.csv
tests/_data/unit/file/fixtures/csv/baseball/seasons/: seasons.csv
tests/_data/unit/file/fixtures/csv/empty_files/: no_records.csv
tests/_data/unit/file/fixtures/csv/file_zoo/: enc_iso8859_1.csv  funny_chars.csv  single_column.csv  trips_with_space_in_column_names.csv  two_columns_pipe_separated.csv  two_columns_quoted.csv.bz2  two_columns_semi_colon.csv  two_columns_tab_separated.tsv  two_columns_unquoted.csv
tests/_data/unit/file/fixtures/csv/order_management/: BusinessPartner.csv  Country.csv  Customer.csv  CustomerType.csv  Department.csv  District.csv  Gender.csv  JobRole.csv  Order.csv  OrderLineItem.csv  OrderStatus.csv  Product.csv  ProductCategory.csv  ProductLine.csv  User.csv
tests/_data/unit/file/fixtures/parquet/: sample_numpy.parquet  sample_pyarrow.parquet
tests/_data/unit/file/fixtures/parquet/file_zoo/: extra_index_column.parquet
tests/_data/unit/file/fixtures/parquet/file_zoo/mismatch/: part.01.parquet  part.02.parquet
tests/_data/unit/file/fixtures/parquet/file_zoo/no_columns/: 000001.parquet
tests/_data/unit/file/fixtures/parquet/order_management/: BusinessPartner.parquet  Country.parquet  Customer.parquet  CustomerType.parquet  Department.parquet  District.parquet  Gender.parquet  JobRole.parquet  Order.parquet  OrderLineItem.parquet  OrderStatus.parquet  Product.parquet  ProductCategory.parquet  ProductLine.parquet  User.parquet
tests/_data/unit/fixtures/push/zoo/not_prefixed/: not_prefixed.parquet
tests/_data/unit/util/: test_kerberos.py
tests/_local/end_to_end/: test_connector.py  test_multi_table_with_text.py  test_simple_flat.py
tests/_local/unit/: test_execution_plan.py  test_server.py
tests/client/: __init__.py
tests/client/unit/: test_base.py  test_naming_conventions.py  test_utils.py
tests/end_to_end/: end_to_end.py
tools/: README.md  docker_entrypoint.py  extend_model.py  model.py  postproc_domain.py  postproc_model.py
tools/custom_template/pydantic_v2/: BaseModel.jinja2
tutorials/: index.html
tutorials/getting-started/: getting-started.ipynb
tutorials/multi-table/: migrate-sqlite.py  multi-table.ipynb
tutorials/quality-assurance/: quality-assurance.ipynb
tutorials/rebalancing/: rebalancing.ipynb
tutorials/smart-imputation/: smart-imputation.ipynb
tutorials/star-schema-correlations/: star-schema-correlations.ipynb
usage/: index.html
(+11 files in other folders)
