[project]
name = "mostlyai"
version = "4.0.3"
description = "Synthetic Data SDK"
authors = [{ name = "MOSTLY AI", email = "dev@mostly.ai" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.4.2,<3",
    "httpx>=0.25.0,<0.28.0",
    "pandas>=1.5.3,<3",
    "pyarrow>=16.0.0",
    "smart_open>=6.0.0",
    "rich>=13.7.0",
    "fastparquet>=2023.4.0,<2024",
    "psutil>=5.9.5,<6",
    "requests>=2.31.0,<3",
    "pydot>=1.4.2,<2",
    "sqlalchemy>=2.0.0,<3",
    "cryptography>=43.0.1,<44",
    "typer>=0.9.0,<0.10",
    "semantic-version>=2.10.0,<3",
    "joblib>=1.2.0,<2",
    "gunicorn>=23.0.0,<24",
    "environs>=9.5.0,<10",
    "gputil>=1.4.0,<2",
    "schema>=0.7.5,<0.8",
    "xxhash>=3.2.0,<4",
    "networkx~=3.1",
    "greenlet>=3.1.1,<4",
    "pycryptodomex>=3.20.0,<4",
    "sshtunnel>=0.4.0,<0.5",
    "xlsxwriter>=3.1.9,<4",
    "openpyxl>=3.1.5",
    # cloud-based connectors
    "s3fs>=2023.1.0,<2024",
    "gcsfs>=2023.1.0,<2024",
    "cloudpathlib[gs, s3, azure]>=0.17.0,<0.18",
    "smart-open[gcs, s3, azure]>=6.3.0,<7",
    "azure-storage-blob>=12.16.0,<13",
    "adlfs>=2023.4.0,<2024",
    "filelock>=3.16.1",
]

[project.optional-dependencies]
local = [
    # local
    "mostlyai-engine==1.0.2",
    "mostlyai-qa==1.5.1",
    "fastapi>=0.115.6,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "python-multipart>=0.0.20",
]
local-gpu = [
    "mostlyai-engine[gpu]==1.0.2",
    "mostlyai-qa==1.5.1",
    "fastapi>=0.115.6,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "python-multipart>=0.0.20",
    "torch>=2.5.1",
]
local-cpu = [
    "mostlyai-engine[cpu]==1.0.2",
    "mostlyai-qa==1.5.1",
    "fastapi>=0.115.6,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "python-multipart>=0.0.20",
    "torch>=2.5.1",
]
# connectors
databricks = ["databricks-sql-connector>=3.2.0,<4"]
googlebigquery = ["sqlalchemy-bigquery>=1.6.1,<2"]
hive = [
    "pyhive[hive-pure-sasl]>=0.7.0,<0.8",
    "kerberos>=1.3.1,<2",
    "impyla>=0.19.0,<0.20",
]
mssql = ["pyodbc>=5.1.0,<6"]
mysql = ["mysql-connector-python>=9.1.0,<10"]
oracle = ["oracledb>=2.2.1,<3"]
postgres = ["psycopg2>=2.9.4,<3"]
snowflake = ["snowflake-sqlalchemy>=1.6.1,<2"]

[dependency-groups]
dev = [
    "pytest>=7.0.0,<8",
    "pre-commit>=4.0.0,<5",
    "datamodel-code-generator[http]>=0.26.3,<0.27",
    "vcrpy>=5.1.0,<6",
    "ruff==0.9.2",
    "respx>=0.20.2,<0.21",
    "twine>=6.0.1,<7",
    "pkginfo>=1.12.0,<2",
    "poetry-bumpversion>=0.3.2,<0.4",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocstrings[crystal, python]>=0.27.0,<0.28",
    "mkdocs-material>=9.0.0,<10",
    "griffe>=1.0.0,<2",
    "pymdown-extensions>=10.0.0,<11",
    "griffe-fieldz>=0.2.0,<0.3",
    "black>=22.1.0",
]

[project.urls]
homepage = "https://app.mostly.ai/"
repository = "https://github.com/mostly-ai/mostlyai"
documentation = "https://mostly-ai.github.io/mostlyai/"

[tool.uv]
default-groups = ["dev", "docs"]
conflicts = [
  [
    { extra = "local-cpu" },
    { extra = "local-gpu" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "local-cpu"},
]

[tool.hatch.build.targets.sdist]
include = ["mostlyai/sdk"]
exclude = [
    "tools/",
    "tools/**/*",
]

[tool.hatch.build.targets.wheel]
include = ["mostlyai/sdk"]
exclude = [
    "tools/",
    "tools/**/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.poetry_bumpversion.replacements]]
files = ["mostlyai/sdk/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
